fix(domain): fix minor bugs